--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "grapesjs-plugin-forms": "^2.0.6",
     "grapesjs-preset-webpage": "^1.0.3",
     "grapesjs-react": "^4.0.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "grapesjs-swiper-slider": "^0.0.5",
     "react-scripts": "5.0.1",
     "swiper": "^11.1.14",
     "web-vitals": "^2.1.4"
@@ -41,5 +40,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
+    "babel-loader": "^9.2.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "webpack": "^5.96.1",
+    "webpack-cli": "^5.1.4"
   }
 }
